--- a/selection-sort.ipynb
+++ b/selection-sort.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "200c670b",
+   "execution_count": 20,
+   "id": "ab915238",
    "metadata": {},
    "outputs": [
     {
@@ -15,43 +15,27 @@
     }
    ],
    "source": [
-    "lt = [5,2,3,7,8,4,6,1,9]\n",
-    "def selection_sort(lt):\n",
+    "tl = [5,2,3,7,8,4,6,1,9]\n",
+    "def selection_sort(tl):\n",
     "    temp = 0\n",
     "    # 1つ目から最後の１つ前まで最小値を置き換えていく\n",
-    "    for t in range(len(lt)-1):\n",
-    "        min = lt[t]\n",
+    "    for t in range(len(tl)-1):\n",
+    "        min = tl[t]\n",
     "        i = t\n",
-    "        while i < len(lt)-1:\n",
+    "        while i < len(tl)-1:\n",
     "            # minが次の数より大きい時置き換える\n",
-    "            if min > lt[i+1]:\n",
+    "            if min > tl[i+1]:\n",
     "                temp = min\n",
-    "                min = lt[i+1]\n",
-    "                lt[i+1] = temp\n",
+    "                min = tl[i+1]\n",
+    "                tl[i+1] = temp\n",
     "            i += 1\n",
     "        # 最小値が決まっていない一番左の値を最小値で置き換える\n",
-    "        lt[t] = min\n",
-    "    return lt\n",
+    "        tl[t] = min\n",
+    "    return tl\n",
     "\n",
-    "ans = selection_sort(lt)\n",
+    "ans = selection_sort(tl)\n",
     "print(ans)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "92bd07b4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ff44554",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
