Wrote my heap sort algorithm with Python

--- a/heap_sort.ipynb
+++ b/heap_sort.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "12gw1BmxwESMj06U3a4oMXkSDwnuRYrXz",
-      "authorship_tag": "ABX9TyPhU//OmZ1zNTiiwO7dOURF",
+      "authorship_tag": "ABX9TyNe28yx+VWVy5AQpdaORZom",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,41 +35,46 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "OZHy63kI44T7",
-        "outputId": "651d1a2e-f5cd-4812-cf17-1d04e91362ad"
+        "id": "4ghnNQSMyk9y",
+        "outputId": "53075a7b-8b74-4e86-c407-45836c031fd2"
       },
       "source": [
-        "# it needs to be polished\n",
-        "def heap_sort():\n",
-        "    hl = [8,7,3,5,4,1,9,2,6]\n",
-        "    stash = []\n",
-        "    i = 0\n",
-        "    while i*2+1 < len(hl):\n",
-        "        if hl[i] < hl[i*2]:\n",
-        "            stash.append(hl[i])\n",
-        "            hl[i] = hl[i*2]\n",
-        "            hl[i*2] = stash[0]\n",
-        "            stash.clear()\n",
-        "            i = 0\n",
-        "        elif hl[i] < hl[i*2+1]:\n",
-        "            stash.append(hl[i])\n",
-        "            hl[i] = hl[i*2+1]\n",
-        "            hl[i*2+1] = stash[0]\n",
-        "            stash.clear()\n",
-        "            i = 0\n",
+        "def min_heap_sort(arr):\n",
+        "    for i in range(len(arr)-1):\n",
+        "        min_heapify(arr,i)\n",
+        "    return arr\n",
+        "\n",
+        "def min_heapify(arr, i):\n",
+        "    # declare the root which should be the smallest\n",
+        "    top = arr[i]\n",
+        "    k = i+1\n",
+        "    # compare the root with childrens\n",
+        "    while k < len(arr):\n",
+        "        if top <= arr[k]:\n",
+        "            k += 1\n",
         "        else:\n",
-        "            i += 1\n",
-        "    print(hl)\n",
-        "heap_sort()"
+        "            # change the root with smaller children\n",
+        "            temp = top\n",
+        "            arr[i] = arr[k]\n",
+        "            arr[k] = temp\n",
+        "            k = i+1\n",
+        "            top = arr[i]\n",
+        "\n",
+        "arr = [3,2,5,7,8,1,9,4,6]\n",
+        "sort_main(arr)\n",
+        "# output: [1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ],
-      "execution_count": 8,
+      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[9, 8, 4, 7, 3, 1, 5, 2, 6]\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     }
